0026171: Coding rules - eliminate -Wshorten-64-to-32 CLang warnings